LU-17415 ldlm: lock conversion to skip cancelled locks

ldlm_cli_inodebits_convert() should re-check the lock so it's
not being cancelled to skip such locks and avoid an assertion:

LustreError:
15208:0:(ldlm_lock.c:1095:ldlm_grant_lock_with_skiplist())
	ASSERTION( ldlm_is_granted(lock) ) failed:

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: If212931d8fa6a2d8f56c44714de830d5fb4a9a6b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53645
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>